--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -1,40 +1,14 @@
-name: Lint and Test Charts
+name: Terrascan Scan
 
-on: pull_request
+on: [push, pull_request]
 
 jobs:
-  lint-test:
+  scan:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Install Helm
-        uses: azure/setup-helm@v1
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-
-      - name: Install chart-testing
-        uses: helm/chart-testing-action@v2.0.1
-
-      - name: Run chart-testing (list-changed)
-        id: list-changed
-        run: |
-          changed=$(ct list-changed)
-          if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
-          fi
-
-      - name: Run chart-testing (lint)
-        run: ct lint
-
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.0.0
-        if: steps.list-changed.outputs.changed == 'true'
-
-      - name: Run chart-testing (install)
-        run: ct install
+    - name: Run Terrascan
+      run: terrascan scan -i terraform
