--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -20,5 +20,8 @@ jobs:
         chmod +x terrascan
         sudo mv terrascan /usr/local/bin/
 
+    - name: Verify Terrascan Installation
+      run: terrascan --version  
+
     - name: Run Terrascan
       run: terrascan scan -i terraform
