--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -22,4 +22,5 @@ jobs:
 
     - name: Run Terrascan
       run: |
-        cd charts/hello-world && terrascan scan -i terraform
+        cd charts/hello-world
+        terrascan scan -i terraform
