--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -27,4 +27,4 @@ jobs:
     - name: Run Terrascan
       run: |
         cd charts/hello-world
-        terrascan scan -i terraform
+        terrascan scan -i helm
