--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -14,15 +14,4 @@ jobs:
         iac_type: 'terraform'
         iac_version: 'v14'
         policy_type: 'aws'
-        only_warn: true
-        #scm_token: ${{ secrets.ACCESS_TOKEN }}
-        #verbose: true
-        #sarif_upload: true
-        #non_recursive:
-        #iac_dir:
-        #policy_path:
-        #skip_rules:
-        #config_path:
-        #find_vulnerabilities:
-        #webhook_url:
-        #webhook_token:
+        only_warn: false
