--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -12,6 +12,6 @@ jobs:
       uses: tenable/terrascan-action@main
       with:
         iac_type: 'helm'
-        iac_version: 'helm'
+        iac_dir: 'cd charts/hello-world/templates'
         policy_type: 'all'
         only_warn: false
